# spotify-downloader

./: .cache-tanuagg13  .gitignore  README.md  config_template.json  downloader.py  main.py  main_test.py  pyproject.toml  storage.py  track.py
plugins/: __init__.py  clean.py  filebrowser_upload.py
